--- a/css/usage.css
+++ b/css/usage.css
@@ -78,4 +78,34 @@
     width: 10%;
 }
 
+.donut {
+    display: block;
+    /* height: 200px;
+   //   width: 200px;
+      margin: 2em auto;
+       box-shadow: 0 0 1em black;
+      // border-radius: 100%;
+    position: relative;*/
+     transform: rotate(-90deg);
+}
+
+.donut:after {
+    position: absolute;
+    display: block;
+    height: 120px;
+    width: 120px;
+    left: 50%;
+    top: 50%;
+    box-shadow: inset 0 0 0.1em black;
+    content: attr(data-pct)"%";
+    margin-top: -60px;
+    margin-left: -60px;
+    border-radius: 100%;
+    line-height: 120px;
+    font-size: 1em;
+    text-shadow: 0 0 0.5em black;
+    transform: rotate(90deg);
+}
+
+
 
