--- a/css/total.css
+++ b/css/total.css
@@ -6,48 +6,51 @@
 }
 .payment_total {
     width: 95%;
+    display: flex;
+    flex-flow: column ;
+    align-items: flex-end;
+    justify-content: left;
+    padding-top: 0.5em;
+    padding-bottom: 0.5em;
 }
 .payment_total_row {
     display: flex;
     flex-flow: row;
     align-content: flex-end;
     justify-content: center;
-    padding: 0.35em;
-}
+    }
 
 .payment_total_desc {
     align-content: center;
     justify-content: center;
-    width: 50%;
+    width: 60%;
     word-wrap: normal;
     font-weight: normal;
-    padding-right: 25%;
+
 }
 .payment_total_v {
     text-align: left;
     width: 35%;
-    font-size: large;
+    font-size: 25px;
     font-weight: bold;
-    color: #fefefe;
-    padding-left: 10%;
+    color: #FFFFFF;
+   }
+.spr {
+    font-size: 30px;
 }
 
 
-
 .all_total {
-    font-size: large;
-    background-color: #2a6496;
-    padding-top: 1em;
-    padding-bottom: 1em;
+    font-size: 18px;
+
 }
 
 .blue {
     color: #DFF1FF;
+    background-color: rgb(11, 105, 186);
 }
 .dark_blue {
     background-color: #2a6496;
     color: #fefefe;
 }
-.empty_cell {
-    width: 20%;
-}
+
