--- a/css/main.css
+++ b/css/main.css
@@ -462,3 +462,12 @@ svg {
 
 }
 
+@media only screen and (-webkit-min-device-pixel-ratio: 1.5),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min--moz-device-pixel-ratio: 1.5),
+only screen and (min-device-pixel-ratio: 1.5) {
+    .icon1 {
+        background-image:  url(img/permP.svg);
+    }
+}
+
