--- a/css/usage.css
+++ b/css/usage.css
@@ -124,5 +124,32 @@
     -ms-transform: matrix( 0.64819885440779,0,0,0.64819885440778,0,0);
 }
 
+.fld-usage {
+    overflow-y: scroll;
+    max-height: 500px;
+    width: 100%;
+    float: left;
+
+}
+.fld-usage::-webkit-scrollbar-track
+{
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 10px;
+    background-color: #F5F5F5;
+}
+
+.fld-usage::-webkit-scrollbar
+{
+    width: 12px;
+    background-color: #F5F5F5;
+}
+
+.fld-usage::-webkit-scrollbar-thumb
+{
+    border-radius: 10px;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+    background-color: #006DB8;
+}
+
 
 
